k8s/back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.doodle.service: back
  name: back
  namespace: doodle
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.doodle.service: back
  template:
    metadata:
      labels:
        fr.doodle.service: back
    spec:
      containers:
      - name: back
        image: registry.gitlab.com/devops4115904/doodlestudent/doodleback:latest
        ports:
        - containerPort: 8080
      restartPolicy: Always
      imagePullSecrets:
      - name: doodle-app-secret
