k8s/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.doodle.service: front
  name: front
  namespace: doodle
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.doodle.service: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        fr.doodle.service: front
    spec:
      containers:
      - image: registry.gitlab.com/devops4115904/doodlestudent/doodlefront:latest
        name: front
        ports:
        - containerPort: 80
      restartPolicy: Always
      imagePullSecrets:
        - name: doodle-app-secret
