k8s/back-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.doodle.service: back
  name: back
  namespace: doodle
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    fr.doodle.service: back
status:
  loadBalancer: {}
