k8s/doodle-etherpad-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.doodle.service: doodle-etherpad
  name: doodle-etherpad
  namespace: doodle
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    fr.doodle.service: doodle-etherpad
status:
  loadBalancer: {}
