k8s/doodle-mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.doodle.service: doodle-mysql
  name: doodle-mysql
  namespace: doodle
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    fr.doodle.service: doodle-mysql
status:
  loadBalancer: {}
