k8s/maildev-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.doodle.service: maildev
  name: maildev
  namespace: doodle
spec:
  ports:
    - name: "25"
      port: 25
      targetPort: 25
  selector:
    fr.doodle.service: maildev
status:
  loadBalancer: {}
