k8s/phpmyadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.doodle.service: phpmyadmin
  name: phpmyadmin
  namespace: doodle
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    fr.doodle.service: phpmyadmin
status:
  loadBalancer: {}
