k8s/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doodle-ingress
  namespace: doodle
spec:
  rules:
  - host: doodle.tlc.fr
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /management
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /services
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /maildev
        pathType: Prefix
        backend:
          service:
            name: maildev
            port:
              number: 1080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
  - host: pad.tlc.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doodle-etherpad
            port:
              number: 9001
